# flow-like

./: .deepsource.toml  .dockerignore  .fossa.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  bun.lockb  flow-like.code-workspace  flow-like.config.json  package.json  sonar-project.properties
.cargo/: fast-compile.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-environment/: action.yml
.github/instructions/: frontend.instructions.md  general-coding.instructions.md  node-creation.instructions.md
.github/workflows/: alpha-build.yml  alpha-release.yml  audit.yml  benchmark.yml  build-docling.yml  clippy.yml  debug-libmtm.yml  fossa.yml  opencv.yml  qodana.yml  quality-benchmark-tests.yml  quality.yml  release.yml  sonar.yml  tests.yml
.sonarlint/: connectedMode.json
apps/backend/: .dockerignore  .gitignore  Cargo.toml  build.rs  package.json
apps/backend/aws/api/: Cargo.toml
apps/backend/aws/api/src/: main.rs
apps/backend/aws/file-tracker/: Cargo.toml  README.md
apps/backend/aws/file-tracker/src/: event_handler.rs  main.rs
apps/backend/aws/media-transformer/: Cargo.toml
apps/backend/aws/media-transformer/src/: event_handler.rs
apps/backend/aws/runtime/: Cargo.toml  README.md
apps/backend/aws/runtime-async/: Cargo.toml  README.md
apps/backend/aws/runtime-async/src/: execution.rs  main.rs
apps/backend/aws/runtime/src/: execution.rs  main.rs
apps/backend/docker/api/: Dockerfile
apps/backend/docker/runtime/: Dockerfile
apps/backend/entity/src/: bit.rs  comment.rs  course.rs  course_connection.rs  dependency.rs  membership.rs  meta.rs  mod.rs  node.rs  prelude.rs  project.rs  provider_proxy.rs  role.rs  sea_orm_active_enums.rs  template.rs  user.rs
apps/backend/local/api/: Cargo.toml  package.json
apps/backend/local/api/src/: main.rs
apps/backend/prisma/: schema.prisma
apps/backend/src/: error.rs  main.rs  state.rs
apps/backend/src/entity/: bit.rs  comment.rs  course.rs  course_connection.rs  dependency.rs  feedback.rs  invitations.rs  invite_link.rs  join_queue.rs  landing_page.rs  llm_parameters.rs  membership.rs  meta.rs  mod.rs  node.rs  prelude.rs  profile.rs  project.rs  project_api_key.rs  provider_invocation.rs  provider_proxy.rs  publication_log.rs  publication_request.rs  role.rs  sea_orm_active_enums.rs  swimlane.rs  swimlane_item.rs  template.rs  transaction.rs  user.rs  user_api_key.rs
apps/backend/src/middleware/: jwt.rs
apps/backend/src/routes/: auth.rs  health.rs  info.rs  store.rs  user.rs
apps/backend/src/routes/user/: info.rs  lookup.rs
apps/backend/terraform/aws/: main.tf
apps/benchmark/: Cargo.toml
apps/benchmark/src/: main.rs
apps/desktop/: .taurignore  index.html  next.config.mjs  package.json  sentry.client.config.js  sentry.edge.config.js  sentry.server.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/app/: PostHogPageView.tsx  ReactScanComponent.tsx  events.tsx  global-error.tsx  i18n.ts  layout.tsx  loading.tsx  not-found.tsx  page.tsx  provider.tsx  utils.ts
apps/desktop/components/: app-sidebar.tsx  auth-provider.tsx  global-anchor-component.tsx  tauri-provider.tsx  theme-loader.tsx  toast-provider.tsx  (+4 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/assets/: THIRD-PARTY-NOTICES.txt  licenses-node.json  licenses.json  licenses.md
apps/desktop/src-tauri/binaries/linux/x64/: libllama.so-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/binaries/mac/intel/: libggml-base.dylib-x86_64-apple-darwin  libggml-cpu.dylib-x86_64-apple-darwin  libggml-rpc.dylib-x86_64-apple-darwin  libllama.dylib-x86_64-apple-darwin  libmtmd_helper_shared.dylib-x86_64-apple-darwin  libmtmd_shared.dylib-x86_64-apple-darwin
apps/desktop/src-tauri/binaries/win/arm/: ggml-base.dll-aarch64-pc-windows-msvc  ggml-cpu.dll-aarch64-pc-windows-msvc  ggml-rpc.dll-aarch64-pc-windows-msvc  ggml.dll-aarch64-pc-windows-msvc  libomp140.aarch64.dll-aarch64-pc-windows-msvc  llama.dll-aarch64-pc-windows-msvc  mtmd.dll-aarch64-pc-windows-msvc
apps/desktop/src-tauri/binaries/win/x64/: ggml-rpc.dll-x86_64-pc-windows-msvc  llama.dll-x86_64-pc-windows-msvc
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/configs/: tauri.linux.conf.json  tauri.linux.x64.conf.json  tauri.linux.x64.json  tauri.macos.arm.conf.json  tauri.macos.intel.conf.json  tauri.win.arm.conf.json  tauri.win.x64.conf.json
apps/desktop/src-tauri/icons/: Assets.car  icon.icns
apps/desktop/src-tauri/icons/icon.icon/: icon.json
apps/desktop/src-tauri/src/: functions.rs  lib.rs  main.rs  profile.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/adapter - legacy (only for migration)/: database_adapter.rs  mail_adapter.rs  storage_adapter.rs  web_adapter.rs
apps/desktop/src-tauri/src/adapter - legacy (only for migration)/storage_adapter/: file_adapter.rs
apps/desktop/src-tauri/src/functions/: app.rs  bit.rs  file.rs  flow.rs  system.rs  vault.rs
apps/desktop/src-tauri/src/functions/ai/: invoke.rs
apps/desktop/src-tauri/src/functions/app/: sharing.rs
apps/desktop/src-tauri/src/functions/download/: init.rs
apps/desktop/src-tauri/src/functions/flow/: board.rs  catalog.rs  event.rs  run.rs  storage.rs  template.rs
apps/desktop/src-tauri/src/functions/settings/: profiles.rs
apps/docling/: README.md  flow-docling.spec  main.py  pyproject.toml
apps/docs/: astro.config.mjs  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
apps/embedded/: next.config.ts  package.json  wrangler.toml
apps/runtime/: Cargo.toml
apps/runtime-async/: Cargo.toml
apps/runtime/src/: main.rs
apps/schema-gen/: Cargo.toml
apps/web-app/: package.json  tsconfig.json
apps/website/: .gitignore  astro.config.mjs  package.json  tailwind.config.ts  wrangler.toml
assets/: swimlanes.json
tests/data/: embedding-bit.json
tools/: build.bat  build.sh  cuid.ts  generate-schema.ts  img-convert.ts  license-bundle.ts  make-licenses.ts
(+411 files in other folders)
