[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "apps/backend",
    "apps/schema-gen",
    "apps/benchmark",
    "apps/runtime",
    "apps/runtime-async",
    "packages/core",
    "packages/model-provider",
    "packages/bits",
    "packages/types",
    "packages/catalog", "packages/storage",
]

[workspace.dependencies]
lambda_http = "0.14.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.134"
schemars = "0.8.22"
chrono = "0.4.39"
axum = {version="0.8.4", features=["http2", "multipart"]}
sea-orm = { version = "1.1.11", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json", "seaography" ] }
tower = "0.5.2"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
hyper = {version = "1.5.2", features = ["full", "client"]}
hyper-util = {version = "0.1.10", features = ["full"]}
tracing = "0.1.41"
sentry-tracing = "0.38.1"
sentry = "0.38.1"
sentry-tower = { version = "0.38.1", features = ["axum", "axum-matched-path"] }
bytemuck = "1.23.0"
tower-http = {version="0.6.4", features = ["full"]}
async-stripe = {version="0.41.0", features = ["runtime-tokio-hyper"]}