[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "apps/backend/local/api",
    "apps/schema-gen",
    "apps/benchmark",
    "apps/backend/aws/runtime",
    "apps/backend/aws/runtime-async",
    "apps/backend/aws/api",
    "apps/backend/aws/media-transformer",
    "apps/backend/aws/file-tracker",
    "packages/core",
    "packages/model-provider",
    "packages/bits",
    "packages/types",
    "packages/catalog",
    "packages/storage",
    "packages/api",
    "apps/utils/board-decoder",
]

[workspace.dependencies]
flow-like = { path = "packages/core" }
flow-like-types = { path = "packages/types" }
flow-like-api = { path = "packages/api" }
flow-like-model-provider = { path = "packages/model-provider" }
flow-like-bits = { path = "packages/bits" }
flow-like-catalog = { path = "packages/catalog" }
flow-like-storage = { path = "packages/storage" }
lambda_http = "0.15.1"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.134"
schemars = "0.8.22"
chrono = "0.4.41"
axum = {version="0.8.4", features=["http2", "multipart"]}
sea-orm = { version = "1.1.11", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json", "seaography" ] }
tower = "0.5.2"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
hyper = {version = "1.5.2", features = ["full", "client"]}
hyper-util = {version = "0.1.10", features = ["full"]}
tracing = "0.1.41"
sentry-tracing = "0.40.0"
sentry = "0.40.0"
sentry-tower = { version = "0.38.1", features = ["axum", "axum-matched-path"] }
tower-http = {version="0.6.4", features = ["full"]}
async-stripe = {version="0.41.0", features = ["runtime-tokio-hyper"]}
futures-util = "0.3.31"
moka = { version = "0.12.10", features = ["sync"] }
bitflags = "2.9.1"
blake3 = "1.8.2"
lambda_runtime = "0.14.2"
aws-config = "1.8.3"
aws-sdk-dynamodb = "1.80.0"
aws-sdk-s3 = "1.93.0"
tokio = {version="1.47.1"}
urlencoding = "2.1.3"
image = "0.25.6"
imageproc = "0.25.0"
webp = "0.3.0"
aws-sdk-sts = "1.80.0"
ahash = "0.8.11"
base64 = "0.22.1"

[profile.dev]
split-debuginfo = "unpacked"
