[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.8.1", features=["http2", "multipart"]}
sea-orm = { version = "1.1.4", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json" ] }
serde = "1.0.217"
socket2 = "0.5.8"
tokio = {version="1.43.0", features=["full"]}
tower = "0.5.2"
tracing-subscriber = "0.3.19"
flow-like = { path = "../../packages/core" }
serde_json = "1.0.137"
anyhow = "1.0.95"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
reqwest = "0.12.12"
hyper = {version = "1.5.2", features = ["full", "client"]}
hyper-util = {version = "0.1.10", features = ["full"]}
tracing = "0.1.41"
sentry-tracing = "0.36.0"
sentry = "0.36.0"
sentry-tower = { version = "0.36.0", features = ["axum", "axum-matched-path"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 
strip = true
