[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
flow-like-types = { path = "../../packages/types" }
reqwest = { version = "0.12.15", features = ["blocking"] }

[dependencies]
axum.workspace = true
sea-orm.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
socket2 = "0.5.9"
tower.workspace = true
tracing-subscriber.workspace = true
flow-like = { path = "../../packages/core" }
flow-like-types = { path = "../../packages/types" }
serde_json.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tracing.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true
sentry-tower.workspace = true
bytemuck.workspace = true
tower-http.workspace = true
chrono.workspace = true
oasgen = {version="0.25.0", features = ["axum"]}
async-stripe.workspace = true


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
