[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"
description = "Schema Generation for flow-like Types"
authors = ["TM9657 GmbH"]
repository = "https://github.com/TM9657/flow-like/"
categories = ["GenAI", "AI", "Productivity"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
flow-like = {path="../../packages/core"}
