[package]
name = "flow-like-desktop"
version = "0.0.2"
description = "Flow-Like, Automation done with the press of a Button"
authors = ["TM9657 GmbH"]
repository = "https://github.com/TM9657/flow-like/"
edition = "2024"
homepage = "https://flow-like.com"
categories = ["GenAI", "AI", "Productivity"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow_like_dekstop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
flow-like = { path = "../../../packages/core" }
flow-like-catalog = { path = "../../../packages/catalog" }
flow-like-types = { path = "../../../packages/types" }
tauri = { version = "2.4.1", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2.2.1"
serde_json = "1.0.134"
tauri-plugin-log = "2.3.1"
tauri-plugin-notification = "2.2.2"
window-vibrancy = "0.6.0"
anyhow = "1.0.95"
sentry = { version = "0.37.0", features = ["anyhow"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-deep-link = "2.2.1"
sentry-tracing = "0.37.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = { version = "0.1.41", features = ["async-await", "attributes"] }
dirs-next = "2.0.0"
futures.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
tauri-plugin = "2.2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
incremental = false

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
