[package]
name = "flow-like-desktop"
version = "0.0.2"
description = "Flow-Like, Automation done with the press of a Button"
authors = ["TM9657 GmbH"]
repository = "https://github.com/TM9657/flow-like/"
edition = "2024"
homepage = "https://flow-like.com"
categories = ["GenAI", "AI", "Productivity"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow_like_desktop_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
flow-like = {workspace = true, features = ["tauri"] }
flow-like-catalog.workspace = true
flow-like-types.workspace = true
tauri = { version = "2.7.0", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-notification = "2.3.0"
window-vibrancy = "0.6.0"
anyhow = "1.0.95"
sentry = { version = "0.42.0", features = ["anyhow"] }
tauri-plugin-dialog = "2.3.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-deep-link = "2.4.1"
sentry-tracing = "0.42.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = { version = "0.1.41", features = ["async-await", "attributes"] }
dirs-next = "2.0.0"
futures.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
image.workspace = true
imageproc.workspace = true
webp.workspace = true
tauri-plugin = "2.3.1"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-http = "2.5.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-fs = "2.4.1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
incremental = false

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"  # macOS
incremental = true

[profile.dev.package."*"]
opt-level = 0
