[package]
name = "aws-api"
version = "0.1.0"
edition = "2024"

[dependencies]
flow-like-api.workspace = true
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog.workspace = true
lambda_http.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true
sentry-tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
