[package]
name = "file-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-like-api.workspace = true
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["sqs", "s3"] }

aws-config = "1.8.0"
aws-sdk-dynamodb = "1.80.0"
aws-sdk-s3 = "1.93.0"

serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lambda_runtime = "0.14.2"
tokio = { version = "1", features = ["macros"] }
chrono.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
