[package]
name = "file-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-like-api.workspace = true
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["sqs", "s3"] }

aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true

serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lambda_runtime.workspace = true
tokio = { workspace = true, features = ["macros"] }
chrono.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
