[package]
name = "media-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-like-types.workspace = true
flow-like-storage.workspace = true
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["s3"] }
image = "0.25.6"

lambda_runtime = "0.14.1"
tokio = { version = "1", features = ["macros"] }
