[package]
name = "media-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-like-types.workspace = true
flow-like-storage.workspace = true
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["s3", "sqs"] }
image = "0.25.6"

serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lambda_runtime = "0.14.2"
tokio = { version = "1", features = ["macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
