[package]
name = "aws-runtime-async"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.16.0"
flow-like.workspace = true
flow-like-types.workspace = true
lambda_runtime = {version="0.13.0", features = ["anyhow"]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
