[package]
name = "aws-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-like.workspace = true
flow-like-types.workspace = true
lambda_http.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true
sentry-tower.workspace = true
tracing.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
